--- a/code/esp_code/components/driver_tof/CMakeLists.txt
+++ b/code/esp_code/components/driver_tof/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "task_acquire.c" "task_communication.c"
+idf_component_register(SRCS "tof.c"
                        INCLUDE_DIRS "."
-                       PRIV_REQUIRES driver nvs_flash esp_timer driver_atmel)
+                       PRIV_REQUIRES driver nvs_flash esp_timer)
