--- a/code/esp_code/components/Tasks/CMakeLists.txt
+++ b/code/esp_code/components/Tasks/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "task_acquire.c" "task_communication.c"
+idf_component_register(SRCS "task_control.c" "task_meas.c"
                        INCLUDE_DIRS "."
                        PRIV_REQUIRES driver nvs_flash esp_timer)
