--- a/code/esp_code/components/udp/CMakeLists.txt
+++ b/code/esp_code/components/udp/CMakeLists.txt
@@ -1,3 +1,4 @@
 idf_component_register(SRCS "udp_server.c"
                     INCLUDE_DIRS "."
+                                 "../protocol_examples_common/include"
                     PRIV_REQUIRES nvs_flash protocol_examples_common)
