--- a/code/esp_code/components/motor_driver/CMakeLists.txt
+++ b/code/esp_code/components/motor_driver/CMakeLists.txt
@@ -1,5 +1,6 @@
 idf_component_register(SRCS "driver.c"
                        INCLUDE_DIRS "." 
                                     "include"
+									"../Tasks/"
                        PRIV_REQUIRES driver nvs_flash esp_timer)
                     
