all three example graphs done

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ PCB/MicroMouse/main_board/fp-info-cache
 build/
 .clangd
 code/esp_code/.cache/clangd/index
+plotter/build-plotter-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug
