--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ build/
 .clangd
 code/esp_code/.cache/clangd/index
 plotter/build-plotter-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug
+plotter/build-Debug
