--- a/code/esp_code/components/Tasks/CMakeLists.txt
+++ b/code/esp_code/components/Tasks/CMakeLists.txt
@@ -1,4 +1,4 @@
-idf_component_register(SRCS "task_udp.cpp" "task_meas.cpp" "../ahrs/ahrs.c" "../mpu9250/mpu9250.c" "../mpu9250/ak8963.c" "../mpu9250/calibrate.c" "../mpu9250/common.c" "../mpu9250/i2c-easy.c" "../motor_driver/driver.c"
+idf_component_register(SRCS "task_udp.cpp" "task_meas.cpp" "../ahrs/ahrs.c" "../mpu9250/mpu9250.c" "../mpu9250/ak8963.c" "../mpu9250/calibrate.c" "../mpu9250/common.c" "../mpu9250/i2c-easy.c" 
                        INCLUDE_DIRS "."
                        "../driver_tof"
                        "../driver_tof/core/inc"
