Co-authored-by: Filip Lobpreis <Fildo7525@users.noreply.github.com>

--- a/code/esp_code/components/control_algos/CMakeLists.txt
+++ b/code/esp_code/components/control_algos/CMakeLists.txt
@@ -2,5 +2,6 @@ idf_component_register(SRCS "control.c"
                        INCLUDE_DIRS "." 
                                     "include"
 									"../Tasks/"
+                                    "../motor_driver/include"
                        PRIV_REQUIRES driver nvs_flash esp_timer)
                     
