--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,27 @@ PCB/MicroMouse/main_board/fp-info-cache
 build/
 .clangd
 code/esp_code/.cache/clangd/index
+FEIStyle/example_paper.acn
+FEIStyle/example_paper.acr
+FEIStyle/example_paper.alg
+FEIStyle/example_paper.bbl
+FEIStyle/example_paper.bcf
+FEIStyle/example_paper.blg
+FEIStyle/example_paper.fdb_latexmk
+FEIStyle/example_paper.glg
+FEIStyle/example_paper.glo
+FEIStyle/example_paper.gls
+FEIStyle/example_paper.ist
+FEIStyle/example_paper.loa
+FEIStyle/example_paper.lol
+FEIStyle/example_paper.pri
+FEIStyle/example_paper.run.xml
+FEIStyle/example_paper.aux
+FEIStyle/example_paper.bcf
+FEIStyle/example_paper.fls
+FEIStyle/example_paper.lof
+FEIStyle/example_paper.log
+FEIStyle/example_paper.lot
+FEIStyle/example_paper.out
+FEIStyle/example_paper.synctex.gz
+FEIStyle/example_paper.toc
